<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kniffel</string>
    <string name="button_2players">2 Spieler</string>
    <string name="button_3players">3 Spieler</string>
    <string name="button_4players">4 Spieler</string>
    <string name="insert_player_names_here">Namen des Spielers eingeben:</string>
    <string name="edit_text_for_players_names_filler">#Player1</string>
    <string name="button_accept_player_name">Bestätigen</string>
    <string name="game_over">Spiel beendet</string>
    <string name="highscore_score">Score</string>
    <string name="highscore_date">Date</string>
    <string name="highscore_text">HIGHSCORES</string>
    <string name="game_over_names_filler">\"Spieler 1\" : XXX</string>
    <string name="button_scoreboard">Scoreboard</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="dice_button">Würfeln</string>
    <string name="submit_button">Eintragen</string>
    <string name="cross_out_button">Streichen</string>
    <string name="toss">Wurf</string>
    <string name="player1">Spieler 1</string>
    <string name="player2">Spieler 2</string>
    <string name="player3">Spieler 3</string>
    <string name="player4">Spieler 4</string>
    <string name="toss_one">1er</string>
    <string name="toss_two">2er</string>
    <string name="toss_three">3er</string>
    <string name="toss_four">4er</string>
    <string name="toss_five">5er</string>
    <string name="toss_six">6er</string>
    <string name="toss_summary">Gesamt</string>
    <string name="toss_bonus">Bonus</string>
    <string name="toss_three_doubles">Dreier-\nPasch</string>
    <string name="toss_four_doubles">Vierer-\nPasch</string>
    <string name="toss_full_house">Full-\nHouse</string>
    <string name="toss_little_street">Kleine\nStraße</string>
    <string name="toss_large_street">Große\nStraße</string>
    <string name="toss_kniffel">Kniffel</string>
    <string name="toss_chance">Chance</string>
    <string name="toss_end_summary">End-\nsumme</string>
    <string name="name">Name</string>
    <string name="text_roll_the_dice">ist an der Reihe</string>
    <string name="countdown_rolling_the_dice">3</string>
    <string name="rules_text">Regeln</string>
    <string name="heading_roll_the_dice">Würfeln</string>
    <string name="dice_one">Würfel 1</string>
    <string name="dice_two">Würfel 2</string>
    <string name="dice_three">Würfel 3</string>
    <string name="dice_four">Würfel 4</string>
    <string name="dice_five">Würfel 5</string>
    <string name="player_name_roll_the_dice">Spieler 1:</string>
    <string name="button_clear_selected_dices">Würfel zurücklegen</string>
    <string name="introduction_text">Für jeden Spieler ist in der Kniffel-Tabelle eine Spalte vorgesehen, in der seine Ergebnisse eingetragen werden. In jeder Runde muss jeder Mitspieler in einem der 13 Kästchen eine Eintragung machen. Dies sollte möglichst die Summe der gewürfelten Augen sein, aber – wenn’s knifflig wird – ist leider auch mal eine Null dabei...</string>
    <string name="getting_ready_to_play_title">Spielvorbereitung</string>
    <string name="getting_ready_to_play_text">Ein Spieler wird bestimmt, der die Anzahl der Spieler und die Namen aller Spieler in der App einträgt. Es wird reihum gewürfelt und der jüngste Spieler beginnt. Nachdem die Namen der Mitspielereingetragen wurden, kann das Spiel auch schon losgehen.</string>
    <string name="goal_of_the_game_title">Spielziel</string>
    <string name="goal_of_the_game_text">Clever würfeln und am Ende die meisten Punkte in der Kniffel-Tabelle erreichen.</string>
    <string name="how_to_proceed_titel">Spielverlauf</string>
    <string name="how_to_proceed_text">Die Spieler sind reihum einmal pro Runde mit dem Würfeln an der Reihe.Dabei können sie bis zu  dreimal würfeln. Der erste Wurf erfolgt mit allen fünf Würfeln.  Danach kann der Spieler sich entscheiden,mit wie vielen Würfeln er beim 2. und 3. Versuch würfeln möchte. Dabei klickt er die Würfel, die er behalten möchte, an, und würfelt somit nur mit denen, dieihm „nicht gefallen“. So kann er versuchen, sein Ergebnis mit dem 2. und 3.  Versuch zu verbessern. Er kann aber auch auf einen oder beide Zusatzwürfe verzichten.Spätestens nach dem dritten Wurf muss der Spieler sein Wurfergebnis in der Kniffel-Tabelle eintragen. Erfüllt der Wurf keine der Bedingungen für die Kästchen,wird ein beliebiges Kästchen „gestrichen“ (= eine Null wird eingetragen).\nBeispiel:\nMelanie hat drei Fünfen und zwei Dreien gewürfelt. \nSie hat nun vier Möglichkeiten:\n•\t15 Punkte. Im oberen Teil in ihrem Kästchen für die Fünfen (Die Würfel, die andere Zahlen zeigen, werden nicht gezählt.)\n•\t6 Punkte. Im oberen Teil in ihrem Kästchen für die Dreien\n•\t21 Punkte. Im unteren Teil in ihrem Kästchen für „Dreierpasch“\n•\t25 Punkte. Im unteren Teil in ihrem Kästchen für „Full House“</string>
    <string name="roll_the_dice_titel">Würfeln</string>
    <string name="roll_the_dice_text">Der Spieler, der an der Reihe ist, schüttelt das Handy vertikal, dadurch werden die Würfel geschüttelt und der Spieler würfelt.</string>
    <string name="points_title">Punkte</string>
    <string name="points_in_upper_part_title">Der obere Teil</string>
    <string name="points_in_upper_part_text">Die Kniffel-Tabelle ist unterteilt in einen oberen und einen unteren Teil. Im oberen Teil sind die Kästchen für Einsen, Zweien, Dreien, Vieren, Fünfen und Sechsen. Entschließt sich ein Spieler, sein Würfelergebnis hier einzutragen, zählt er alle gewürfelten gleichen Zahlen zusammen und trägt das Ergebnis in das entsprechende Kästchen ein.</string>
    <string name="bonus_titel">Bonus</string>
    <string name="bonus_text">Um den Bonus von 35 Punkten zu bekommen, müssen die Spieler mindestens 63 Punkte im gesamten oberen Teil zusammenaddiert erreichen.</string>
    <string name="points_in_lower_part_title">Der untere Teil</string>
    <string name="points_in_lower_part_text">Im unteren Teil sind die Kästchen für die Sonderwürfe:  \n\nDreierpasch:  \nMindestens drei gleiche Zahlen. Alle Augen des Wurfes (nicht nur die der gleichen Zah- len) werden zusammengezählt.  \n6  6  6  3  1  = 22 Punkte \n\nViererpasch:  \nMindestens vier gleiche Zahlen. Auch hier werden alle Augen des Wurfes zusammengezählt. \n3  3  3  3  5  = 17 Punkte   \n\nFull-House:  \nDrei gleiche und zwei gleiche, andere Zahlen (z.B. drei Vieren und zwei Einsen). Für ein Full-House gibt es pauschal 25 Punkte.  \n4  4  4  3  3  = 25 PUnkte  \n\nKleine Straße:  \nEine Folge von vier aufeinander folgenden Würfeln. Der fünfte Würfel kann eine beliebige Zahl zeigen (z. B. 1, 2, 3, 4, 2). Eine kleine Straße bringt pauschal 30 Punkte.  \n1  2  3  4  3 = 30 Punkte  \n\nGroße Straße \nEine Folge von fünf aufeinander folgenden Würfeln (z. B. 2, 3, 4, 5, 6). Eine große Straße bringt pauschal 40 Punkte. \n 2  3  4  5  6 = 40 Punkte  \n\nKniffel®:  \n5gleicheZahlen. EinKniffel® bringt 50 Punkte.  \n5  5  5  5  5  = 50 Punkte  \n\nChance:  \nGibt dem Spieler die Möglichkeit, einen missglückten Wurf, der keine Bedingung erfüllt, trotzdem als Punkte in seinem „Chancefeld“ gutschreiben zu lassen. Alle Augen des Wurfes werden zusammenaddiert.</string>
    <string name="end_of_the_game_title">Spielende</string>
    <string name="end_of_the_game_text">Das Spiel endet, sobald das letzte Kästchen beim letzten Spieler ausgefüllt ist. Nun werden alle Punkte automatisch zusammengerechnet. Der Spieler mit den meisten Punkten ist der Sieger.</string>
    <string name="scource_title">Quelle</string>
    <string name="scource_text">Schmidt Spiele GmbH Lahnstr. 21 D-12055 Berlin  1972,\n Kniffel registered trademark \n www.schmidtspiele.de \nwww.schmidtspiele-shop.de</string>
    <string name="slogan">  Der knifflige Würfelspaß</string>
    <string name="trials_rolling_the_dice">verfügbare Würfe: </string>


    //Burgermenu
    <string name="highscore_burgermenu_item">Highscore</string>
    <string name="tutorial_burgermenu_item">Tutorial</string>
    <string name="rules_burgermenu_item">Regeln</string>
    <string name="end_game_burgermenu_item">Spiel beenden</string>
    <string name="settings_burgermenu_item">Einstellungen</string>
    <string name="start_new_game_burgermenu_item">"Neues Spiel starten"</string>
    <string name="burgermenu_icon">Burgermenü ausklappen</string>

    // Tutorial
    <string name="tutorial_button_text">weiter</string>
    <string name="button_start_tutorial">Spiel starten</string>
    <string name="tutorial_title_menu_player">Spieleranzahl und Menü</string>
    <string name="tutorial_description_menu_player">In der obenen rechten Ecke befindet sich das Menü. Dieses dient der Navigation und kann mit einem Klick darauf geöffnet werden. \n Bevor das Spiel gestartet werden kann, muss die Spieleranzahl ausgewählt werden. Dazu sind drei Buttons vorhanden. Es sind zwei bis vier Spieler möglich.</string>
    <string name="tutorial_title_player_name">Spieler eintragen</string>
    <string name="tutorial_description_player_name">Ist die Spieleranzahl ausgewählt, kann für jeden Mitspieler der Name eingetragen werden. So weiß man später, wer an der Reihe ist und kann den aktuellen Spielstand in der Tabelle ablesen.</string>
    <string name="tutorial_title_burger_menu">Menü</string>
    <string name="tutorial_description_burger_menu">Im Menü hat man die Möglichkeit zu verschiedensten Teilen der App zu navigieren: \n - Die Highscores der besten Spieler anschauen \n - Dieses Tutorial nochmal aufrufen \n - Die Spielregeln von Kniffel durchlesen \n - Die Einstellungen ändern \n - Das aktuelle Spiel beende \n - Ein neues Spiel starten</string>
    <string name="tutorial_title_dice_activity">Würfeln</string>
    <string name="tutorial_description_dice_activity">"Es wird angezeigt, welcher Spieler an der Reihe ist und wie viele Würfe er beim aktuellen Spielzug noch hat. Um zu Würfeln muss das Gerät geschüttelt werden. "</string>
    <string name="tutorial_title_dice_activity_selected">Würfel auswählen</string>
    <string name="tutorial_description_dice_activity_selected">"Die Würfel, die nicht mehr mit gewürfelt werden sollen, können mit einem Klick auf diese ausgewählt werden. Ausgewählte Würfel erkennt man an einer pinken Umrandung. Bei erneutem schütteln ändert sich nur die Augenzahl der nicht ausgewählten Würfel. Die Würfelauswahl wird durch erneutes Würfeln aufgehoben. \n mit dem Button \"Würfel zurücklegen\" kann die Würfelauswahl auch ohne Würfeln aufgehoben werden. \n Mit dem Button \"Eintragen\" gelangt man zur Auswertungstabelle. "</string>
    <string name="tutorial_table_results">Ergebnisse eintragen</string>
    <string name="tutorial_description_table_results">Die Tabelle zeigt die Ergebnisse aller Spieler an. Man sieht welche Würfe erlangt werden können und auch welche bereits eingetragen sind. \n Die drei Buttons unten dienen der Navigation. Mit ihnen kann man zu den Würfeln zurückgelangen, das gewürfelte Ergebnis beim entsprechenden Spieler eintragen oder auch ein Ergebnis streichen, wenn keine passendes Wurfergebnis gewürfelt wurde.</string>


    //Spielerauswahl
    <string name="slogan_number_of_players">Wähle die Anzahl der Spieler aus</string>

    <string name="value_kniffel">50</string>
    <string name="play_again">nochmal spielen</string>
    <string name="highscores">Highscores</string>
    <string name="next_player_hint">next Player</string>
    <string name="error_message_no_value_inserted">Du musst ein Feld anklicken</string>
    <string name="error_message_clicked_on_false_player">Du ein Feld in DEINER Spalte anklicken</string>
    <string name="error_message_clicked_on_value_that_has_been_entered">Du musst auf ein leeres Feld klicken</string>

    <string name="error_message_not_rolled_the_dices">Du musst zuerst würfeln</string>

    <string name="rules_second_title">So wird gespielt:</string>


</resources>


