<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/heading_roll_the_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/kniffel_textart"
        android:text="@string/heading_roll_the_dice"
        android:textColor="@color/black"
        android:textSize="70sp" />


    <TextView
        android:id="@+id/text_roll_the_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_roll_the_dice"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/player_name_roll_the_dice" />

    <TextView
        android:id="@+id/player_name_roll_the_dice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:fontFamily="@font/kniffel_textart"
        android:text="@string/player_name_roll_the_dice"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/mid_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading_roll_the_dice"/>

    <TextView
        android:id="@+id/trials_rolling_the_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:textColor="@color/gray"
        android:text="@string/trials_rolling_the_dice"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_roll_the_dice" />

    <TextView
        android:id="@+id/countdown_rolling_the_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/gray"
        android:text="@string/countdown_rolling_the_dice"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/trials_rolling_the_dice"
        app:layout_constraintTop_toBottomOf="@id/text_roll_the_dice" />

    <ImageView
        android:id="@+id/dice_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dice_one"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_rolling_the_dice"
        android:src="@drawable/dice_throw_1"/>

    <ImageView
        android:id="@+id/dice_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dice_two"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_1"
        android:src="@drawable/dice_throw_2"/>

    <ImageView
        android:id="@+id/dice_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dice_three"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_2"
        android:src="@drawable/dice_throw_3" />

    <ImageView
        android:id="@+id/dice_4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dice_four"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_3"
        android:src="@drawable/dice_throw_4"/>

    <ImageView
        android:id="@+id/dice_5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dice_five"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_4"
        android:src="@drawable/dice_throw_5"/>


    <Button
        android:id="@+id/button_scoreboard"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button4"
        android:text="@string/button_scoreboard"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_5"
        app:layout_constraintVertical_bias="0.503" />



</androidx.constraintlayout.widget.ConstraintLayout>
