<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartGameWith2Players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/app_name"
        android:fontFamily="@font/kniffel_textart"
        android:textColor="@android:color/black"
        android:textSize="100sp"/>

    <Button
        android:id="@+id/buttonStartGameWith2Players"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/button_2players"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button4" />

    <Button
        android:id="@+id/buttonStartGameWith3Players"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartGameWith2Players"

        android:text="@string/button_3players"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button4" />

    <Button
        android:id="@+id/buttonStartGameWith4Players"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartGameWith3Players"

        android:text="@string/button_4players"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button4"/>


</androidx.constraintlayout.widget.ConstraintLayout>