<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/kniffel_textart"
        android:text="@string/app_name"
        android:textColor="@android:color/black"

        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewInsertPlayersNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan_insert_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:fontFamily="@font/kniffel_textart"
        android:text="@string/insert_player_names_here"
        android:textAlignment="center"
        android:textColor="@color/mid_green"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />



    <EditText
        android:id="@+id/editTextForPlayersNames"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/edit_text_for_players_names_filler"/>

    <Button
        android:id="@+id/buttonAcceptPlayerName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextForPlayersNames"

        android:background="@drawable/custom_button4"
        android:text="@string/button_accept_player_name"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


</androidx.constraintlayout.widget.ConstraintLayout>