<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kniffel_textart"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/button_2players"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/button_2players"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button4" />

    <Button
        android:id="@+id/button_3players"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2players"
        android:text="@string/button_3players"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button4" />

    <Button
        android:id="@+id/button_4players"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_3players"
        android:text="@string/button_4players"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button4"/>
</androidx.constraintlayout.widget.ConstraintLayout>